# algorithms_kata

./: Makefile  README.md  pyproject.toml
src/algorithms_kata/: bin_search.py  main.py
tests/: bin_search_test.py
