[tool.poetry]
name = "algorithms-kata"
version = "0.1.0"
description = ""
authors = ["Alexey Iskovskikh <iskovskikh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
